[project]
name = "vectorstore-word-embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.24",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-ollama>=0.3.3",
    "pydantic>=2.11.5",
    "ruff>=0.11.11",
    "chromadb>=1.0.10",
    "langchain-huggingface>=0.2.0",
    "transformers>=4.52.3",
    "torch>=2.7.0",
    "numpy>=2.2.6",
    "sentence-transformers>=4.1.0",
    "llama-cpp-python>=0.3.16",
    "logfire>=4.8.0",
    "langchain-openai>=0.3.33",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]
